# kproperty

./: .arcconfig  .clang-format  .gitignore  .kde-ci.yml  AUTHORS  CMakeLists.txt  COPYING.LIB  INSTALL  INSTALL.md  KProperty.pc.cmake  KPropertyCore.pc.cmake  KPropertyWidgets.pc.cmake  README.md  kproperty.pc.cmake  metainfo.yaml
autotests/: CMakeLists.txt  KPropertySetTest.cpp  KPropertyTest.cpp
autotests/headers/: BoolEdit_HeaderTest.cpp  CMakeLists.txt  ColorEdit_HeaderTest.cpp  ComboBox_HeaderTest.cpp  CursorEdit_HeaderTest.cpp  DateEdit_HeaderTest.cpp  DateTimeEdit_HeaderTest.cpp  FontEdit_HeaderTest.cpp  HeadersTest.cpp  HeadersTestInclude.cmake  KProperty.h_HeaderTest.cpp  KPropertyEditorDataModel.h_HeaderTest.cpp  KPropertyEditorDataModel_HeaderTest.cpp  KPropertyEditorView.h_HeaderTest.cpp  KPropertyEditorView_HeaderTest.cpp  KPropertyFactory.h_HeaderTest.cpp  KPropertyFactory_HeaderTest.cpp  KPropertySet.h_HeaderTest.cpp  KPropertySet_HeaderTest.cpp  KPropertyStringEditor.h_HeaderTest.cpp  KPropertyStringEditor_HeaderTest.cpp  KPropertyUtils.h_HeaderTest.cpp  KPropertyUtils_HeaderTest.cpp  KProperty_HeaderTest.cpp  LineStyleEdit_HeaderTest.cpp  PixmapEdit_HeaderTest.cpp  PointEdit_HeaderTest.cpp  RectEdit_HeaderTest.cpp  SizeEdit_HeaderTest.cpp  SizePolicyEdit_HeaderTest.cpp  SpinBox_HeaderTest.cpp  TimeEdit_HeaderTest.cpp  Utils_HeaderTest.cpp  booledit.h_HeaderTest.cpp  coloredit.h_HeaderTest.cpp  combobox.h_HeaderTest.cpp  config-kproperty.h_HeaderTest.cpp  cursoredit.h_HeaderTest.cpp  dateedit.h_HeaderTest.cpp  datetimeedit.h_HeaderTest.cpp  (+14 more)
cmake/modules/: FindQHelpGenerator.cmake  KPropertyAddIconsRccFile.cmake  KPropertyAddQCH.cmake  KPropertyMacros.cmake  MacroLogFeature.cmake  SetKPropertyCMakePolicies.cmake  update_icon_list.sh
examples/: CMakeLists.txt  main.cpp  window.cpp  window.h
poqm/ar/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/ast/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/ca/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/ca@valencia/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/cs/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/de/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/en_GB/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/eo/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/es/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/et/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/eu/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/fi/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/fr/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/ga/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/gl/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/he/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/hi/: kpropertycore_qt.po
poqm/ia/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/it/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/ja/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/ka/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/ko/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/lt/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/nl/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/nn/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/pl/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/pt/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/pt_BR/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/ro/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/ru/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/sk/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/sl/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/sv/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/tr/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/uk/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/x-test/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/zh_CN/: kpropertycore_qt.po  kpropertywidgets_qt.po
poqm/zh_TW/: kpropertycore_qt.po  kpropertywidgets_qt.po
src/: CMakeLists.txt  DefaultFactory.cpp  DefaultFactory.h  EditorDataModel.cpp  EditorDataModel.h  EditorView.cpp  EditorView.h  Factory.cpp  Factory.h  KDefaultPropertyFactory.cpp  KDefaultPropertyFactory.h  KProperty.cpp  KProperty.h  KPropertyComposedUrl.cpp  KPropertyComposedUrl.h  KPropertyConfig.cmake.in  KPropertyCoreConfig.cmake.in  KPropertyCoreUtils.cpp  KPropertyCoreUtils_p.h  KPropertyEditorDataModel.cpp  KPropertyEditorDataModel.h  KPropertyEditorDataModel_p.cpp  KPropertyEditorDataModel_p.h  KPropertyEditorItemEvent.cpp  KPropertyEditorItemEvent.h  KPropertyEditorView.cpp  KPropertyEditorView.h  KPropertyFactory.cpp  KPropertyFactory.h  KPropertyLineStyleItemDelegate_p.cpp  KPropertyLineStyleItemDelegate_p.h  KPropertyLineStyleModel_p.cpp  KPropertyLineStyleModel_p.h  KPropertyLineStyleSelector_p.cpp  KPropertyLineStyleSelector_p.h  KPropertyListData.cpp  KPropertyListData.h  KPropertySet.cpp  KPropertySet.h  KPropertySetBuffer.cpp  (+34 more)
src/editors/: CMakeLists.txt  KPropertyComposedUrlEditor.cpp  KPropertyComposedUrlEditor.h  KPropertyGenericSelectionEditor.cpp  KPropertyGenericSelectionEditor.h  KPropertyMultiLineStringEditor.cpp  KPropertyMultiLineStringEditor.h  KPropertyRectFEditor.cpp  KPropertyRectFEditor.h  KPropertyStringEditor.cpp  KPropertyStringEditor.h  KPropertyUrlEditor.cpp  KPropertyUrlEditor.h  KPropertyUrlEditor_p.cpp  KPropertyUrlEditor_p.h  booledit.cpp  booledit.h  coloredit.cpp  coloredit.h  combobox.cpp  combobox.h  cursoredit.cpp  cursoredit.h  dateedit.cpp  dateedit.h  datetimeedit.cpp  datetimeedit.h  dummywidget.cpp  dummywidget.h  fontedit.cpp  fontedit.h  fontedit_p.h  linestyleedit.cpp  linestyleedit.h  pixmapedit.cpp  pixmapedit.h  pointedit.cpp  pointedit.h  pointfedit.cpp  pointfedit.h  (+22 more)
src/pics/: CMakeLists.txt
src/pics/icons/breeze/: files.cmake
